--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to left, blue, red);
+  background: linear-gradient(to right, rgb(0, 238, 255), rgb(0, 124, 128));
 }
 .calculator-body {
   margin: 2em;
